Fix display footer widgget of jankx base on mobile

--- a/resources/css/base.css
+++ b/resources/css/base.css
@@ -211,6 +211,8 @@ blockquote.right {
     float: none;
   }
 }
-.footer-widgets-area .jankx-footer-widget {
-  float: left;
+@media (min-width: 768px) {
+  .footer-widgets-area .jankx-footer-widget {
+    float: left;
+  }
 }
