--- a/sass/_footer_widgets.scss
+++ b/sass/_footer_widgets.scss
@@ -1,5 +1,7 @@
-.footer-widgets-area {
-    .jankx-footer-widget {
-        float: left;
+@media(min-width: 768px) {
+    .footer-widgets-area {
+        .jankx-footer-widget {
+            float: left;
+        }
     }
 }
